--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<body>
+		<meta charset="UTF-8">
 		<style>
 			body {
 				margin: 0;
@@ -12,4 +13,4 @@
 		<script src='map3d.js'></script>
 		<script src='main.js'></script>
 	</body>
-</html>mance
+</html>
