--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
 		<style>
 			body {
 				margin: 0;
-				overflow: hidden;
+			}
+
+			canvas {
+				position: absolute;
+				top: 0;
+				left: 0;
+				z-index: -1;
 			}
 		</style>
+		<p>Движение -- WASD | Летене -- QE | Поставяне -- Ляво копче на мишката | Премахване -- Дясно копче на мишката</p>
 		<canvas id=canvas> </canvas>
 		<script src='linear.js'></script>
 		<script src='map3d.js'></script>
